Added sonar maven scanner version

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	<plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-        <version>yourPluginVersion</version>
+        <version>3.9.1.2184</version>
       </plugin>
 		</plugins>
 	</build>
